--- a/src/scss/_partials/_breakpoint-base.scss
+++ b/src/scss/_partials/_breakpoint-base.scss
@@ -5,6 +5,7 @@
 @font-face {
 	font-family: 'Silkscreen';
 	src: url('assets/font/Silkscreen/Silkscreen-Regular.ttf');
+	font-display: swap;
 }
 
 * {
@@ -14,7 +15,7 @@
 
 body {
 	color: #d4d4d4;
-	font-family: 'Silkscreen', sans-serif;
+	font-family: 'Silkscreen', monospace, sans-serif;
 	height: 100vh;
 	height: 100dvh;
 	margin: 0;
@@ -391,11 +392,10 @@ form {
 		z-index: 1;
 	}
 	
-	&:nth-of-type(32n):after {
+	&.no-border-right:after {
 		border-right: none;
 	}
-	
-	&:nth-of-type(992) ~ .pixel:after {
+	&.no-border-bottom:after {
 		border-bottom: none;
 	}
 }
@@ -473,7 +473,7 @@ form {
 	li {
 		border: 1px solid rgba(0,0,0,.25);
 		cursor: pointer;
-		font-size: 0;
+		//font-size: 0;
 		height: 30px;
 		min-width: 30px;
 		width: 30px;
@@ -526,6 +526,7 @@ form {
 		
 		img {
 			width: 100%;
+			height: 100%;
 		}
 		
 	}
