--- a/src/scss/_partials/_breakpoint-tablet-landscape.scss
+++ b/src/scss/_partials/_breakpoint-tablet-landscape.scss
@@ -1,5 +1,9 @@
 @media (min-width:790px) and (min-height:600px) and (orientation:landscape) {
 
+	body {
+		font-size: 1em;
+	}
+
 	.button-frame {
 		
 		button {
@@ -84,5 +88,9 @@
 		justify-content: space-between;
 		margin: 1em 0;
 		padding: 0;
+	}
+	
+	.copyright {
+		font-size: 1em;
 	}
 }
